--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
 				<div class="school-menu-card">
 					<div class=" uk-padding  uk-padding-remove-bottom">
 						<h2 class="uk-text school-menu-text-title">Créche</h2>
-						<p class="uk-text school-menu-text-boody">State Certified Créche</p>
+						<p class="uk-text school-menu-text-body">State Certified Créche</p>
 						<div class="school-menu-text-age">
-							<h1 class="uk-text">1-2</h1> <sup ><u>years old</u></sup>
+							<h1 class="uk-text school-age-number">1-2</h1> <sup ><u>years old</u></sup>
 						</div>
 						<span class="uk-margin-small-left" uk-icon="icon: arrow-right; ratio: 2"></span>
 					</div>
@@ -64,27 +64,27 @@
 				<div class="school-menu-card">
 					<div class=" uk-padding  uk-padding-remove-bottom">
 						<h2 class="uk-text school-menu-text-title">Preschool</h2>
-						<p class="uk-text school-menu-text-boody">State Certified Preschool</p>
+						<p class="uk-text school-menu-text-body">State Certified Preschool</p>
 						<div class="school-menu-text-age">
-							<h1 class="uk-text">3-4</h1> <sup><u>years old</u></sup>
+							<h1 class="uk-text school-age-number">3-4</h1> <sup><u>years old</u></sup>
 						</div>
 					</div>
 				</div>
 				<div class="school-menu-card">
 					<div class=" uk-padding  uk-padding-remove-bottom">
 						<h2 class="uk-text school-menu-text-title">Lower & Upper Primary</h2>
-						<p class="uk-text school-menu-text-boody">GES certified basic school</p>
+						<p class="uk-text school-menu-text-body">GES certified basic school</p>
 						<div class="school-menu-text-age">
-							<h1 class="uk-text">5-12</h1> <sup><u>years old</u></sup>
+							<h1 class="uk-text school-age-number">5-12</h1> <sup><u>years old</u></sup>
 						</div>
 					</div>
 				</div>
 				<div class="school-menu-card">
 					<div class=" uk-padding  uk-padding-remove-bottom">
 						<h2 class="uk-text school-menu-text-title">Junior High School</h2>
-						<p class="uk-text school-menu-text-boody">Basic Education Certificate Exam</p>
+						<p class="uk-text school-menu-text-body">Basic Education Certificate Exam</p>
 						<div class="school-menu-text-age" >
-							<h1 class="uk-text">12-16</h1> <sup><u>years old</u></sup>
+							<h1 class="uk-text school-age-number">12-16</h1> <sup><u>years old</u></sup>
 						</div>
 					</div>
 				</div>
@@ -220,9 +220,6 @@
 								<div class="uk-card-footer uk-padding-remove">
 									<a href="#" class="uk-button uk-button-text">Read more</a>
 								</div>
-							</div>
-							<div class="uk-card-footer uk-padding-remove">
-								<a href="#" class="uk-button uk-button-text">Read more</a>
 							</div>
 						</div>
 						<div>
