Working On JS For academics page

--- a/academics.html
+++ b/academics.html
@@ -16,6 +16,9 @@
 		<!-- UIkit JS -->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.26/js/uikit.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.26/js/uikit-icons.min.js"></script>
+
+		<!-- Academics Page JS -->
+		<script src="js/academics/script.js"></script>
 	</head>
 	<body>
 		<!--HEADER-->
@@ -69,9 +72,9 @@
 		<!--SCHOOL MENU-->
 		<section class="uk-section uk-padding-remove school-menu-section" >
 			<div class=" uk-text-left">
-				<div class="school-menu-card">
+				<div class="school-menu-card" onclick="schoolClick('creche')">
 					<div class="uk-padding ">
-						<div class="uk-text school-menu-text-title">Créche</div>
+						<div class="uk-text school-menu-text-title" >Créche</div>
 						<p class="uk-text school-menu-text-body">State Certified Créche</p>
 						<div class="school-menu-text-age">
 							<div class="uk-text school-age-number splash-burgundy">1-2</div> <div class="superscript splash-burgundy"><u>years old</u></div>
@@ -79,7 +82,7 @@
 						<span class="uk-margin-small-left" uk-icon="icon: arrow-right; ratio: 2"></span>
 					</div>
 				</div>
-				<div class="school-menu-card">
+				<div class="school-menu-card" onclick="schoolClick('preschool')">
 					<div class="uk-padding ">
 						<div class="uk-text school-menu-text-title">Preschool</div>
 						<p class="uk-text school-menu-text-body">State Certified Preschool</p>
@@ -90,7 +93,7 @@
 					</div>
 					
 				</div>
-				<div class="school-menu-card">
+				<div class="school-menu-card" onclick="schoolClick('primaryschool')">
 					<div class="uk-padding ">
 						<div class="uk-text school-menu-text-title"> Primary School</div>
 						<p class="uk-text school-menu-text-body">State Certified Preschool</p>
@@ -100,7 +103,7 @@
 						<span class="uk-margin-small-left" uk-icon="icon: arrow-right; ratio: 2"></span>
 					</div>
 				</div>
-				<div class="school-menu-card" style="border-right: none">
+				<div class="school-menu-card" style="border-right: none" onclick="schoolClick('jhs')">
 					<div class="uk-padding ">
 						<div class="uk-text school-menu-text-title">Junior High School</div>
 						<p class="uk-text school-menu-text-body">Basic Education Certificate Exam</p>
@@ -115,14 +118,14 @@
 		<!--/SCHOOL MENU-->
 		<!--SCHOOL INTRODUCTION-->
 		<section class="uk-section uk-padding-remove uk-margin-large-top" >
-				<div class="uk-text page-heading uk-text-large uk-text-capitalize uk-margin-large-left">Créche</div>
+				<div class="uk-text page-heading uk-text-large uk-text-capitalize uk-margin-large-left" id ='schoolName' >Créche</div>
 			<div class="page-hero" style="background-image: url(images/children-cute-enjoyment-1432697.jpg)"></div>
 				
 			<div class="intro-section-container spring-wood-bg">
 			<div class="intro-text-container uk-padding">
 					<div class="uk-padding uk-text uk-text-left">
 						<h3 class="uk-text-left column-title"><span>Welcome Message from the Head</span></h3>
-						<p class="uk-margin-large-top">
+						<p class="uk-margin-large-top" id="schoolMessage">
 							Fountainhead Christian School was founded in 2001 by Rev. Faithful and Rev. Mrs. Mary Biney. In 1984, they moved back to Ghana with the vision and passion to touch many lives. Since then, they have reached out through Leadership Training Programs and Mercy Ministries.<br>
 							Recognizing the need for quality transformational basic education, they started two schools; Fountainhead Christian school, Sakumono-Tema and Calvary Academy in the heart of the central region. More recently they have branched out into tertiary education – Fountainhead Christian College at community 12, Tema.
 						</p>
@@ -140,7 +143,7 @@
 		<section class="uk-section uk-padding ">
 			<div class="uk-padding uk-text"><div class="uk-text-left splash-burgundy splash-charter section-title"><span>Academic Programme & Curriculum</span></div></div>
 			<div class="uk-padding uk-text">
-				<p class="uk-margin-large-top">
+				<p class="uk-margin-large-top" id="schoolCurriculumIntro">
 					The Infant School follows the revised Early Years Foundation Stage Framework (Nursery and Reception) and Key Stage 1 of the English National Curriculum (classes 1 and 2), modified to take into account the local setting. Reference is also made to the Cambridge International Primary Curriculum  for Stages 1 to 3 in English, Mathematics, Science, English as a Second Language and Information Communication Technology.
 					<br>
 					<br>
