--- a/academics.html
+++ b/academics.html
@@ -52,10 +52,10 @@
 			<div class="page-hero" style="background-image: url(images/blur-children-class-448877.jpg)"></div>
 				
 			<div class="intro-section-container spring-wood-bg">
-			<div class="intro-text-container uk-padding">
+			<div class="intro-text-container">
 					<div class="uk-padding uk-text uk-text-left">
 						<h3 class="uk-text-left column-title"><span>Welcome Message from the Head</span></h3>
-						<p class="uk-margin-large-top">
+						<p class="uk-margin-large-top text-body">
 							Fountainhead Christian School was founded in 2001 by Rev. Faithful and Rev. Mrs. Mary Biney. In 1984, they moved back to Ghana with the vision and passion to touch many lives. Since then, they have reached out through Leadership Training Programs and Mercy Ministries.<br>
 							Recognizing the need for quality transformational basic education, they started two schools; Fountainhead Christian school, Sakumono-Tema and Calvary Academy in the heart of the central region. More recently they have branched out into tertiary education – Fountainhead Christian College at community 12, Tema.
 						</p>
