responsive + indicated div where display none should be

--- a/academics.html
+++ b/academics.html
@@ -77,7 +77,7 @@
 						<div class="uk-text school-menu-text-title" >Créche</div>
 						<p class="uk-text school-menu-text-body">State Certified Créche</p>
 						<div class="school-menu-text-age">
-							<div class="uk-text school-age-number splash-burgundy">1-2</div> <div class="superscript splash-burgundy"><u>years old</u></div>
+							<div class="uk-text school-age-number splash-burgundy">1-2</div> <div class="superscript splash-burgundy">years old</div>
 						</div>
 						<span class="uk-margin-small-left" uk-icon="icon: arrow-right; ratio: 2"></span>
 					</div>
@@ -87,7 +87,7 @@
 						<div class="uk-text school-menu-text-title">Preschool</div>
 						<p class="uk-text school-menu-text-body">State Certified Preschool</p>
 						<div class="school-menu-text-age">
-							<div class="uk-text school-age-number splash-burgundy">3-4</div> <div class="superscript splash-burgundy"><u>years old</u></div>
+							<div class="uk-text school-age-number splash-burgundy">3-4</div> <div class="superscript splash-burgundy">years old</div>
 						</div>
 						<span class="uk-margin-small-left" uk-icon="icon: arrow-right; ratio: 2"></span>
 					</div>
@@ -98,7 +98,7 @@
 						<div class="uk-text school-menu-text-title"> Primary School</div>
 						<p class="uk-text school-menu-text-body">State Certified Preschool</p>
 						<div class="school-menu-text-age">
-							<div class="uk-text school-age-number splash-burgundy">12-16</div> <div class="superscript splash-burgundy"><u>years old</u></div>
+							<div class="uk-text school-age-number splash-burgundy">12-16</div> <div class="superscript splash-burgundy">years old</div>
 						</div>
 						<span class="uk-margin-small-left" uk-icon="icon: arrow-right; ratio: 2"></span>
 					</div>
@@ -108,7 +108,7 @@
 						<div class="uk-text school-menu-text-title">Junior High School</div>
 						<p class="uk-text school-menu-text-body">Basic Education Certificate Exam</p>
 						<div class="school-menu-text-age">
-							<div class="uk-text school-age-number splash-burgundy">5-12</div> <div class="superscript splash-burgundy"><u>years old</u></div>
+							<div class="uk-text school-age-number splash-burgundy">5-12</div> <div class="superscript splash-burgundy">years old</div>
 						</div>
 						<span class="uk-margin-small-left" uk-icon="icon: arrow-right; ratio: 2"></span>
 					</div>
@@ -117,15 +117,21 @@
 		</section>
 		<!--/SCHOOL MENU-->
 		<!--SCHOOL INTRODUCTION-->
+		
+		
+		<!-- PUT style "display: none" here		-->
+		<div>
+		<!--	remove this	-->
+		
 		<section class="uk-section uk-padding-remove uk-margin-large-top" >
-				<div class="uk-text page-heading uk-text-large uk-text-capitalize uk-margin-large-left" id ='schoolName' >Créche</div>
+				<div class="uk-text page-heading uk-text-large uk-text-capitalize uk-margin-large-left splash-burgundy splash-charter section-title" id ='schoolName'>Créche</div>
 			<div class="page-hero" style="background-image: url(images/children-cute-enjoyment-1432697.jpg)"></div>
 				
 			<div class="intro-section-container spring-wood-bg">
 			<div class="intro-text-container uk-padding">
-					<div class="uk-padding uk-text uk-text-left">
+					<div class=" uk-text uk-text-left">
 						<h3 class="uk-text-left column-title"><span>Welcome Message from the Head</span></h3>
-						<p class="uk-margin-large-top" id="schoolMessage">
+						<p class="uk-margin-top text-body" id="schoolMessage">
 							Fountainhead Christian School was founded in 2001 by Rev. Faithful and Rev. Mrs. Mary Biney. In 1984, they moved back to Ghana with the vision and passion to touch many lives. Since then, they have reached out through Leadership Training Programs and Mercy Ministries.<br>
 							Recognizing the need for quality transformational basic education, they started two schools; Fountainhead Christian school, Sakumono-Tema and Calvary Academy in the heart of the central region. More recently they have branched out into tertiary education – Fountainhead Christian College at community 12, Tema.
 						</p>
@@ -141,9 +147,9 @@
 		<!--/SCHOOL INTRODUCTION-->
 		<!--CURRICULUM AREA-->
 		<section class="uk-section uk-padding ">
-			<div class="uk-padding uk-text"><div class="uk-text-left splash-burgundy splash-charter section-title"><span>Academic Programme & Curriculum</span></div></div>
-			<div class="uk-padding uk-text">
-				<p class="uk-margin-large-top" id="schoolCurriculumIntro">
+			<div class=" uk-text"><div class="uk-text-left splash-burgundy splash-charter section-title"><span>Academic Programme & Curriculum</span></div></div>
+			<div class=" uk-text">
+				<p class="uk-margin-top text-body" id="schoolCurriculumIntro">
 					The Infant School follows the revised Early Years Foundation Stage Framework (Nursery and Reception) and Key Stage 1 of the English National Curriculum (classes 1 and 2), modified to take into account the local setting. Reference is also made to the Cambridge International Primary Curriculum  for Stages 1 to 3 in English, Mathematics, Science, English as a Second Language and Information Communication Technology.
 					<br>
 					<br>
@@ -154,11 +160,12 @@
 		<!--/CURRICULUM AREA-->
 		<!--SUBJECTS AREA-->
 		<section class="uk-section uk-padding ">
-			<div class="uk-padding uk-text"><div class="uk-text-left splash-burgundy splash-charter section-title"><span>Subjects</span></div></div>
+			<div class=" uk-text"><div class="uk-text-left splash-burgundy splash-charter section-title"><span>Subjects</span></div></div>
 			<div class="uk-padding uk-text">
 				
 			</div>
 		</section>
+		</div>
 		<!--/SUBJECTS AREA-->
 	</body>
 </html>
