--- a/academics.html
+++ b/academics.html
@@ -142,7 +142,7 @@
 		</section>
 		<!--/SCHOOL INTRODUCTION-->
 		<!--CURRICULUM AREA-->
-		<section class="uk-section uk-padding section-width uk-margin-large-top">
+		<section class="uk-section  section-width uk-margin-large-top">
 			<div class=" uk-text"><div class="uk-text-left splash-burgundy splash-charter section-title"><span>Academic Programme & Curriculum</span></div></div>
 			<div class="margin-from-title uk-text">
 				<p class="uk-margin-top text-body" id="schoolCurriculumIntro">
@@ -155,7 +155,7 @@
 		</section>
 		<!--/CURRICULUM AREA-->
 		<!--SUBJECTS AREA-->
-		<section class="uk-section uk-padding section-width">
+		<section class="uk-section section-width">
 			<div class=" uk-text"><div class="uk-text-left splash-burgundy splash-charter section-title"><span>Subjects</span></div></div>
 			<div class="uk-padding uk-text">
 				
