--- a/campus_life.html
+++ b/campus_life.html
@@ -20,26 +20,53 @@
 	<body>
 		<!--HEADER-->
 		<header>
-			<div class="uk-container ">
-				<nav class="uk-navbar-transparent" data-uk-navbar >
-					<div class="uk-navbar-left">
-						<a class="uk-navbar-item uk-logo" href="#">Logo</a>
-					</div>
-					<div class="uk-navbar-right uk-visible@m">
-						<ul class="uk-navbar-nav">
-							<li class="uk-active"><a href="#">Home</a></li>
-							<li><a href="#">About</a></li>
+			<div class="logo-div">
+				<a href="http://africsec.com"><img class="logo-white" src="images/logo.png" alt="LADLINK LOGO"/></a>
+			</div>
+			<div class="header-upper">
+				<nav class="clear-menu">
+					<ul>
+						<li class="uk-active"><a href="index.html">Home</a></li>
+							<li><a href="about.html">About</a></li>
 							<li><a href="#">Admissions</a></li>
-							<li><a href="#">Programmes</a></li>
+							<li><a href="academics.html">Programmes</a></li>
 							<li><a href="#">Community</a></li>
-							<li><a href="#">Campus Life</a></li>
+							<li><a href="campus_life.html">Campus Life</a></li>
 							<li><a href="#">Parents</a></li>
 							<li><a href="#">Contact</a></li>
-							<li><a class="uk-button uk-button-default">Apply Now</a></li>
-						</ul>
-					</div>
+							<li><a class="intro-section-button uk-button fill-burgundy splash-white">Apply Now</a></li>
+							
+					</ul>
+
 				</nav>
 			</div>
+			
+			<div class="mobile-menu-wrap menu-closed">
+			<div class="mobile-logo-div">
+				<a href=""><img class="logo-white" src="images/phone-book.svg" alt=""/></a>
+			</div>
+				<nav class="mobile-menu" >
+					<ul>
+						<li class="uk-active"><a href="#">Home</a></li>
+							<li><a href="#">About</a></li>
+							<li><a href="about.html">Admissions</a></li>
+							<li><a href="academics.html">Programmes</a></li>
+							<li><a href="#">Community</a></li>
+							<li><a href="campus_life.html">Campus Life</a></li>
+							<li><a href="#">Parents</a></li>
+							<li><a href="#">Contact</a></li>
+							<li><a class="uk-button uk-button-default mobile-menu-button fill-burgundy">Apply Now</a></li>
+					</ul>
+				</nav>
+			</div>
+			<div>
+				
+			</div>
+			<div class="menu-icon menu-icon-inactive">
+				<div class="icon-bar"></div>
+				<div class="icon-bar"></div>
+			</div>
+
 		</header>
 		<!--/HEADER-->
 		
