Working on jquery scroll to section

--- a/academics.html
+++ b/academics.html
@@ -96,7 +96,7 @@
 		<section class="uk-section uk-padding-remove school-menu-section" >
 			<div class=" uk-text-left">
 				
-				<div class="school-menu-card" onclick="schoolClick('creche')" id="creche-card">
+				<div class="school-menu-card" onclick="schoolClick('creche')" class="creche-card">
 					<div class="uk-padding ">
 						<div class="uk-text school-menu-text-title">Crèche</div>
 						<p class="uk-text school-menu-text-body">State Certified Preschool</p>
@@ -114,7 +114,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="school-menu-card" onclick="schoolClick('preschool')" id="preschool-card">
+				<div class="school-menu-card" onclick="schoolClick('preschool')" class="preschool-card">
 					<div class="uk-padding ">
 						<div class="uk-text school-menu-text-title">Nursery, KG1, KG2</div>
 						<p class="uk-text school-menu-text-body">State Certified Preschool</p>
@@ -132,7 +132,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="school-menu-card" onclick="schoolClick('primaryschool')" id="primaryschool-card">
+				<div class="school-menu-card" onclick="schoolClick('primaryschool')" class="primaryschool-card">
 					<div class="uk-padding ">
 						<div class="uk-text school-menu-text-title">Lower & Upper Primary</div>
 						<p class="uk-text school-menu-text-body">GES certified curriculum</p>
@@ -150,7 +150,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="school-menu-card" style="border-right: none" onclick="schoolClick('jhs')" id="jhs-card">
+				<div class="school-menu-card" style="border-right: none" onclick="schoolClick('jhs')" class="jhs-card">
 					<div class="uk-padding ">
 						<div class="uk-text school-menu-text-title">Junior high</div>
 						<p class="uk-text school-menu-text-body">Basic Education Certificate Exams</p>
@@ -226,7 +226,7 @@
 
 
 	<!-- PRESCHOOL SECTION -->
-	<section id ='preschool' style="display:none" >
+	<section id ='preschool' style="display:none" class="preschool-section">
 		<!-- PUT style "display: none" here		-->	
 		<section class="uk-section uk-padding-remove uk-margin-large-top" >
 				<div class="uk-text page-heading uk-text-large uk-text-capitalize uk-margin-large-left splash-burgundy splash-charter section-title" >Preschool</div>
