--- a/campus_life.html
+++ b/campus_life.html
@@ -260,8 +260,30 @@
 		</section>
 		<!--/NEWS AREA-->
 		<!--FOOTER-->
-		<section class="fill-burgundy" style="height: 30vh;">
-			
+		<section class=" fill-burgundy" style="height: auto; min-height: 30vh;">
+			<div class="footer-logo-container section-width">
+				<div class="footer-logo-div">
+					<a href="http://ladlinkschool.com"><img class="footer-logo-white" src="images/ladlink-logo.png" alt="LADLINK LOGO"/></a>
+					<span class="footer-school-title">Ladlink School</span>
+				</div>
+				<div class="footer-menu">
+					<div class="footer-location">
+						<div class="footer-menu-items" style="padding: 0px; border: none;">
+							11300 Falls Road Lutherville, MD 21093
+							<br>+233 410.252.3366
+						</div>
+					</div>
+					<div class="footer-site-map">
+						<div class="footer-menu-items"><a class="footer-link" href="index.html">Home</a></div>
+						<div class="footer-menu-items"><a class="footer-link" href="about.html">About</a></div>
+						<div class="footer-menu-items"><a class="footer-link"  href="admissions.html">Admissions</a></div>
+						<div class="footer-menu-items"><a class="footer-link"  href="academics.html">Programmes</a></div>
+						<div class="footer-menu-items"><a  class="footer-link" href="campus_life.html">Campus Life</a></div>
+						<div class="footer-menu-items" style="border: none;"><a class="footer-link"  href="#">Contact</a></div>
+					</div>
+					
+				</div>
+			</div>
 		</section>
 		<!--/FOOTER-->
 		
