fixed academics page active school menu tabs added animation to school switcher consolidated JS replaced school switcher JS with UIKit implementation

--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
 
     <head>
         <title>Ladlink School</title>
-        <link rel="icon" href="img/favicon.ico">
+        <link rel="icon" href="images/ladlink-favicon.ico">
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        
+        <meta name="viewport" content="width=device-width, initial-scale=1">        
         <!-- UIkit CSS -->
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.26/css/uikit.min.css" />
 		
@@ -16,11 +15,10 @@
 		<!-- UIkit JS -->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.26/js/uikit.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.26/js/uikit-icons.min.js"></script>
-		<!-- Master  JS -->
-		
+		<!-- JQuery -->
+		<script  src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 		<!-- Scroll Reveal	-->
 		<script src="https://unpkg.com/scrollreveal"></script>
-		
 	</head>
 	<body>
 		<!--HEADER-->
@@ -408,48 +406,12 @@
 				</div>
 			</div>
 		</section>
-		<!--/FOOTER-->
+	
 		<!--/FOOTER-->
 		
 		
 		
 	</body>
-	<script  src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-  
-	 <script>
-		 var slideUp = {
-			 distance: '150%',
-			 origin: 'bottom',
-			 opacity: null,
-			 mobile: false
-		 };
-		 var slideLeft = {
-			 distance: '150%',
-			 origin: 'left',
-			 opacity: null,
-			 mobile: false
-		 };
-		 var slideRight = {
-			 distance: '150%',
-			 origin: 'right',
-			 opacity: null,
-			 mobile: false
-		 };
-
-		ScrollReveal().reveal('.home-calendar',slideUp);
-		ScrollReveal().reveal('.home-head',slideLeft);
-		ScrollReveal().reveal('.message-box',slideRight);
-		ScrollReveal().reveal('.fact-card',{duration: 2000});
-		ScrollReveal().reveal('.news-card',{duration: 2000});
-		ScrollReveal().reveal('.school-menu-card', { interval: 200 });
-
-		jQuery(document).ready(function($) {
-			$('.menu-icon').click(function(event) {
-				$(this).toggleClass('menu-icon-inactive').toggleClass('menu-icon-active');
-				$('.mobile-menu-wrap').toggleClass('menu-closed').toggleClass('menu-open');
-			});
-		});
-
-	</script>
-  
+	<!-- Master  JS -->
+	<script src="js/logic.js"></script>
 </html>
