Working on scroll method for academics page

--- a/academics.html
+++ b/academics.html
@@ -19,6 +19,8 @@
 		<script  src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 		<!-- Scroll Reveal	-->
 		<script src="https://unpkg.com/scrollreveal"></script>
+
+		
 	</head>
 	<body>
 		<!--HEADER-->
@@ -93,7 +95,7 @@
 		<!--SCHOOL MENU-->
 		<div class="uk-text-left" uk-switcher="animation: uk-animation-slide-left-medium, uk-animation-slide-right-medium toggle: > *" style="width: 100%;font-size: 0;">
 
-			<div class="school-menu-card">
+			<div class="school-menu-card" >
 				<div class="uk-padding activate-card">
 					<div class="uk-text school-menu-text-title">Crèche</div>
 					<p class="uk-text school-menu-text-body">State Certified Preschool</p>
@@ -129,7 +131,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="school-menu-card">
+			<div class="school-menu-card" >
 				<div class="uk-padding activate-card">
 					<div class="uk-text school-menu-text-title">Lower & Upper Primary</div>
 					<p class="uk-text school-menu-text-body">GES certified curriculum</p>
@@ -389,4 +391,11 @@
 	</body>
 	<!-- Master  JS -->
 	<script src="js/logic.js"></script>
+<script>
+	
+
+
+
+</script>
+
 </html>
