--- a/about.html
+++ b/about.html
@@ -101,6 +101,7 @@
 			<div class="margin-from-title uk-text">
 				<div class="uk-grid-collapse uk-child-width-expand@s uk-text-left" uk-grid>
 					<div class="fact-card">
+					<div class="text-body uk-margin-left uk-margin-bottom">We want to ensure our individual pupil goal is sustained year after year, day after day, of every single child that walks through our doors. In order to achieve this, we aim to:</div>
 						<div class="fact-header ">
 							<svg class="svg-icon mission-statement-icon"width="561px" height="636px" viewBox="0 0 561 636" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 								<!-- Generator: Sketch 52.5 (67469) - http://www.bohemiancoding.com/sketch -->
@@ -115,15 +116,12 @@
 									</g>
 								</g>
 							</svg>
-							<div class="mission-statement uk-margin-left splash-charter">We want to ensure our individual pupil goal is sustained year after year, day after day, of every single child that walks through our doors. In order to achieve this, we aim to:
-								<ul>
-									<li>Motivate our pupils to see themselves as achievers.</li>
-									<li>Unearth, develop and encourage talents.</li>
-									<li>Foster a positive ethos in which everyone’s contribution is valued</li>	
-									<li>create self-trust in the ability of students to excel in all endeavors</li>	
-									<li>instil a level of responsibility even at an early age</li>	
-								</ul>
-
+							<div class="mission-statement uk-margin-left splash-charter">
+								<span class="splash-burgundy ">Motivate</span> our pupils to see themselves as achievers.
+								<br><span class="splash-burgundy">Unearth</span>, develop and encourage talents.
+								<br><span class="splash-burgundy">Foster</span> a positive ethos in which everyone’s contribution is valued.
+								<br><span class="splash-burgundy">Create self-trust</span> in the ability of students to excel in all endeavors.
+								<br><span class="splash-burgundy">Instil responsibility</span> even at an early age.	
 							</div>
 						</div>
 					</div>
@@ -136,22 +134,32 @@
 		<section class="uk-section section-width ">
 			<div class=" uk-text"><div class="uk-text-left splash-burgundy splash-charter section-title"><span>Management</span></div></div>
 			<div class="margin-from-title uk-text">
-				
-					<div class="uk-child-width-1-4@m" uk-grid>
-						<div>
-							<div class="uk-card ">
-								<div class="uk-card-media-top mgt-image">
-									<img src="images/adult-business-computer-1181725.jpg" alt="">
-								</div>
-								<div class="uk-card-body uk-padding-remove">
-									<p class="uk-card-title uk-margin-top splash-charter splash-burgundy">Kristina Thompson</p>
-									<p>Head of Admissions.</p>
-								</div>
+				<div class="uk-child-width-1-2@m" uk-grid>
+					<div class="fly-from-down">
+						<div class="uk-card spring-wood-bg">
+							<div class="uk-card-media-top">
+								<img src="images/head.jpg" alt="">
+							</div>
+							<div class="uk-card-body">
+								<h3 class="uk-text-right column-title splash-burgundy">Media Top</h3>
+								<p class="uk-text-right text-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
 							</div>
 						</div>
-				
-					</div>		
+					</div>
+					<div class="fly-from-top">
+						<div class="uk-card spring-wood-bg">
+							<div class="uk-card-body">
+								<h3 class="uk-text-left column-title splash-burgundy">Media Bottom</h3>
+								<p class="text-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+							</div>
+							<div class="uk-card-media-bottom">
+								<img src="images/mgt.jpg" alt="">
+							</div>
+						</div>
+					</div>
+				</div>
 			</div>
+			
 			
 		</section>
 		<!--/MANAGEMENT AREA-->
@@ -167,7 +175,9 @@
 		<!--/ADMISSION PROCESS-->
 		<!--CONTACT SESSION-->
 		<section class="uk-section uk-padding spring-wood-bg contact-section" style="padding-bottom: 150px">
+		<div class="contact-section-hero" style="background-image: url(images/adult-brainstorming-business-1181622.jpg)"></div>
 			<div class="section-width">
+			
 			<div class="margin-from-title uk-text"><div class="uk-text-left splash-burgundy splash-charter section-title"><span>Contacts</span></div></div>
 			<div class="uk-margin-top uk-child-width-1-2@m" uk-grid>
 				<div>
