--- a/about.html
+++ b/about.html
@@ -141,11 +141,23 @@
 								<img src="images/head.jpg" alt="">
 							</div>
 							<div class="uk-card-body">
-								<h3 class="uk-text-right column-title splash-burgundy">Media Top</h3>
-								<p class="uk-text-right text-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+								<h3 class="uk-text-left column-title splash-burgundy">Media Top</h3>
+								<p class="uk-text-left text-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
 							</div>
 						</div>
 					</div>
+					<div class="fly-from-top">
+						<div class="uk-card spring-wood-bg">
+							<div class="uk-card-media-top">
+								<img src="images/mgt.jpg" alt="">
+							</div>
+							<div class="uk-card-body">
+								<h3 class="uk-text-left column-title splash-burgundy">Media Top</h3>
+								<p class="uk-text-left text-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+							</div>
+						</div>
+					</div>
+<!--
 					<div class="fly-from-top">
 						<div class="uk-card spring-wood-bg">
 							<div class="uk-card-body">
@@ -157,6 +169,7 @@
 							</div>
 						</div>
 					</div>
+-->
 				</div>
 			</div>
 			
